--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,67 +1,78 @@
- <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact section-bg">
-      <div class="container" data-aos="fade-up">
+<!-- ======= Contact Section ======= -->
+<section id="contact" class="contact section-bg">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>For more enquiries and or information, please contact us via phone, email, social media handles. You can equally visit us at the location below.</p>
+    <div class="section-title">
+      <h2>Contact</h2>
+      <p>For more enquiries and or information, please contact us via phone, email, social media handles. You can
+        equally visit us at the location below.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="info-box mb-4">
+          <i class="bx bx-map"></i>
+          <h3>Our Address</h3>
+          <p>7 Factory Road Aba, Abia State, Nigeria</p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="info-box mb-4">
-              <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
-              <p>7 Factory Road Aba, Abia State, Nigeria</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="info-box  mb-4">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>desmondubadire@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>+2348107583440</p>
-            </div>
-          </div>
-
-
-          <div class="col-lg-4">
-            <h1>Message us</h1>
-            <form action="forms" method="post" role="form" class="php-email-form">
-              <div class="form-row ">
-                <div class="col-md-4 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-
-                <div class="col-md-4 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="text-center">
-                <button type="submit" class="btn btn-dark">Send Message</button>
-                </div>
-            </form>
-          </div>
-
-        </div>
-
       </div>
-    </section><!-- End Contact Section -->
+
+      <div class="col-lg-4 col-md-4">
+        <div class="info-box  mb-4">
+          <i class="bx bx-envelope"></i>
+          <h3>Email Us</h3>
+          <p>desmondubadire@gmail.com</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4">
+        <div class="info-box  mb-4">
+          <i class="bx bx-phone-call"></i>
+          <h3>Call Us</h3>
+          <p>+2348107583440</p>
+        </div>
+      </div>
+
+
+      <div class="col-lg-4">
+        <h1>Message us</h1>
+        {{{message}}}
+        <form action="/send" method="post" role="form" class="emailForm">
+          <div class="form-row ">
+            <div class="col-md-4 form-group">
+              <input required type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4"
+                data-msg="Please enter at least 4 chars" />
+              <div class="validation"></div>
+            </div>
+
+            <div class="col-md-4 form-group">
+              <input  type="email" required class="form-control" name="email" id="email" placeholder="Your Email"
+                data-rule="email" data-msg="Please enter a valid email" />
+              <div class="validation"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input required type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
+              data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+            <div class="validation"></div>
+          </div>
+          <div class="form-group">
+            <textarea required class="form-control" name="message" rows="5" data-rule="required"
+              data-msg="Please write something for us" placeholder="Message"></textarea>
+            <div class="validation"></div>
+          </div>
+          <div class="col-md-12 text-center mb-3">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your message has been sent. Thank you!</div>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-dark">Send Message</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Contact Section -->
