--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -36,7 +36,8 @@
         <div class="col m3 footer-newsletter">
           <h4>Join Our Newsletter</h4>
           <p>Subscribe to our Newsletter to get updates from us.</p>
-          <form action="/send" method="post">
+           {{{message}}}
+          <form action="/subscribe" method="post">
             <input type="email" name="email">
             <input type="submit" value="Subscribe">
           </form>
